Improved literature review

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
@@ -10,7 +10,7 @@
 \hfill \parbox{8.0cm}{Projeto de Graduação apresentado ao Curso de Engenharia Eletrônica e de Computação da Escola Politécnica, Universidade Federal do Rio de Janeiro, como parte dos requisitos necessários à obtenção do título de Engenheiro.\\}
    \vspace{2cm}
 \hfill \parbox{8.0cm}{Orientador: Luiz Pereira Calôba \newline 
-	Coorientador: Nathanael Nunes de Moura Junior
+	Coorientador: Natanael Nunes de Moura Junior
 } \\
    \vspace{2cm}
 \begin{center}
