--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -116,6 +116,8 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}CMO - Custo Marginal de Operação
 \paragraph{}CVU - Custo Variável Unitário
 \paragraph{}UTE - Usina Térmica
+\paragraph{}ENA - Energia Natural Armazenada
+\paragraph{}EAR - Energia Armazenada
 \paragraph{}CCEAR - Contrato de Comercialização de Energia ELétrica no Ambiente Regulado
 \paragraph{}PMO - Planejamento Mensal de Operação
 \paragraph{}CFURH - Compensação Financeira pelo Uso dos Recursos Hídricos
