--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -1,106 +1,35 @@
 @MASTERSTHESIS{
 	AlteracaoModeloComercializacao,
 	AUTHOR = "Edimilson Ferreira da Silva",
-	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
+	TITLE = "Principais Condicionantes das alterações no modelo de comercialização",
 	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
 	YEAR = "2008",
 }
 @MISC{
-	MatrizEnergetica,
-	AUTHOR = "Empresa de Pesquisa Energética",
-	TITLE = "Matriz Energética e Elétrica",
+	EPE,
+	AUTHOR = "EPE",
+	TITLE = "Empresa de Pesquisa Energética",
 	HOWPUBLISHED = "http://www.epe.gov.br/pt/abcdenergia/matriz-energetica-e-eletrica",
   	YEAR = "2018",
   	NOTE = "(Acesso em 26 Janeiro 2019)",
 }
 @MISC{
-	SIN,
+	ONS,
 	AUTHOR = "ONS",
-	TITLE = "O Sistema Interligado Nacional",
-	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-sin/o-que-e-o-sin",
+	TITLE = "Operador Nacional do Sistema Elétrico",
+	HOWPUBLISHED = "http://ons.org.br/",
 	YEAR = "2019",
-	NOTE = "(Acesso em 27 Janeiro 2019)",
+	NOTE = "(Acesso em 27 Janeiro 2019)"
 }
 @MISC{
-	ONS_O_QUE_E,
-	AUTHOR = "ONS",
-	TITLE = "O Sistema Interligado Nacional",
-	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-ons/o-que-e-ons",
-	YEAR = "2019",
-	NOTE = "(Acesso em 27 Janeiro 2019)",
-}
-@MISC{
-	SIN_MAPAS,
-	AUTHOR = "ONS",
-	TITLE = "Mapas",
-	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-sin/mapas",
-	YEAR = "2019",
-	NOTE = "(Acesso em 27 Janeiro 2019)",
-}
-@MISC{
-	SIN_GOVERNANCIA,
-	AUTHOR = "ONS",
-	TITLE = "Governança",
-	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-ons/governanca/assembleia-geral",
-	YEAR = "2019",
-	NOTE = "(Acesso em 27 Janeiro 2019)",
-}
-@MISC{
-	CCEE_RAZAO_SER,
+	CCEE,
 	AUTHOR = "CCEE",
-	TITLE = "A CCE",
-	HOWPUBLISHED = "https://www.ccee.org.br/portal/faces/pages\_publico/quem-somos/razao-de-ser",
+	TITLE = "Câmara de Comercialização de Energia Elétrica",
+	HOWPUBLISHED = "https://www.ccee.org.br/",
 	YEAR = "2019",
 	NOTE = "(Acesso em 31 Janeiro 2019)",
 }
-@MISC{
-	CCEE_COM_QUEM_SE_RELACIONA,
-	AUTHOR = "CCEE",
-	TITLE = "Com quem se relaciona",
-	HOWPUBLISHED = "https://www.ccee.org.br/portal/faces/pages\_publico/onde-atuamos/com\_quem\_se\_relaciona",
-	YEAR = "2019",
-	NOTE = "(Acesso em 31 Janeiro 2019)",
-}
-@MISC{
-	EPE_O_QUE_FAZEMOS,
-	AUTHOR = "EPE",
-	TITLE = "O que fazemos",
-	HOWPUBLISHED = "http://www.epe.gov.br/pt/a-epe/o-que-fazemos",
-	YEAR = "2019",
-	NOTE = "(Acesso em 31 Janeiro 2019)",
-}
-@MISC{
-	CCEE_PRECO_PLD,
-	AUTHOR = "CCEE",
-	TITLE = "Preço Médio da CCEE",
-	HOWPUBLISHED = "https://www.ccee.org.br/portal/faces/pages\_publico/o-que-fazemos/como\_ccee\_atua/precos/precos\_medios",
-	YEAR = "2019",
-	NOTE = "(Acesso em 4 de Fevereiro de 2019)",
-}
-@MISC{
-	CCEE_PLD_ANEXO,
-	AUTHOR = "CCEE",
-	TITLE = "Preço de Liquidação das Diferenças\_Anexo\_1.0\_formatado - CCEE",
-	HOWPUBLISHED = "www.ccee.org.br/ccee/documentos/ccee\_059061",
-	YEAR = "2019",
-	NOTE = "(Acesso em 10 de Fevereiro de 2019)",
-}
-@MISC{
-	CCEE_VISAO_GERAL,
-	AUTHOR = "CCEE",
-	TITLE = "Visão Geral das Operações CCEE",
-	HOWPUBLISHED = "http://www.ufjf.br/andre\_marcato/files/2010/06/Visao\_Geral\_das\_Operacoes\_CCEE\_2010.pdf",
-	YEAR = "2010",
-	NOTE = "(Acesso em 24 de Fevereiro de 2019)",
-}
-@MISC{
-	CCEE_METODOLOGIA_PRECOS,
-	AUTHOR = "CCEE",
-	TITLE = "Metodologia de Preços",
-	HOWPUBLISHED = "https://www.ccee.org.br/portal/faces/pages\_publico/o-que-fazemos/como\_ccee\_atua/precos/metodologia\_de\_precos?",
-	YEAR = "2019",
-	NOTE = "(Acesso em 25 de Fevereiro de 2019)",
-}
+
 @MISC{
 	CRISE_2014,
 	AUTHOR = "Energia Inteligente UFJF",
@@ -443,17 +372,28 @@
 	abstract = "In recent years, deep artificial neural networks (including recurrent ones) have won numerous contests in pattern recognition and machine learning. This historical survey compactly summarizes relevant work, much of it from the previous millennium. Shallow and Deep Learners are distinguished by the depth of their credit assignment paths, which are chains of possibly learnable, causal links between actions and effects. I review deep supervised learning (also recapitulating the history of backpropagation), unsupervised learning, reinforcement learning & evolutionary computation, and indirect search for short programs encoding deep and large networks."
 }
 @article{
-	deep_learning_book,
-	url = {http://dx.doi.org/10.1561/2000000039},
-	year = {2014},
-	volume = {7},
-	journal = {Foundations and Trends® in Signal Processing},
-	title = {Deep Learning: Methods and Applications},
-	doi = {10.1561/2000000039},
-	issn = {1932-8346},
-	number = {3?4},
-	pages = {197-387},
-	author = {Li Deng and Dong Yu}
+	deep_learning_book,
+
+	url = {http://dx.doi.org/10.1561/2000000039},
+
+	year = {2014},
+
+	volume = {7},
+
+	journal = {Foundations and Trends® in Signal Processing},
+
+	title = {Deep Learning: Methods and Applications},
+
+	doi = {10.1561/2000000039},
+
+	issn = {1932-8346},
+
+	number = {3?4},
+
+	pages = {197-387},
+
+	author = {Li Deng and Dong Yu}
+
 },
 @Article{
 	microsoft_dl,
@@ -533,5 +473,20 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@MASTERSTHESIS{
+	RNA_DIRETA_E_RECORRENTE,
+	AUTHOR = "Flaviano Ramos Pereira Junior",
+	TITLE = "Redes neurais diretas e recorrentes na previsão do preço de energia elétrica de curto prazo no mercado brasileiro",
+	SCHOOL = "Universidade Federal do Pará",
+	YEAR = "2016",
+}
+
+@MASTERSTHESIS{
+	RNA_PRECO_SPOT,
+	AUTHOR = " Alcantaro Lemes Rodrigues",
+	TITLE = "Redes neurais artificiais aplicadas na previsão de preços do mercado spot de energia elétrica",
+	SCHOOL = "	Universidade de São Paulo ",
+	YEAR = "2009",
+}
 
 
