--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -5,7 +5,7 @@
 \paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores
 \cite{EvolucaoSetorEletrico}. Além disso, foi dado livre acesso aos pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW)  ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico. Isto facilitou o aparecimento de novas fontes de energias e novos produtores no SEB.
 
-\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do sistema. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir:\cite{CCEE_COM_QUEM_SE_RELACIONA}:
+\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do sistema. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir:\cite{CCEE}:
 
 \begin{itemize}
 	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico.}
@@ -16,21 +16,21 @@
 	
 	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula, e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.}
 	
-	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: Atua desde a medição de energia gerada e efetivamente consumida até a liquidação financeira dos contratos de compra e venda no curto prazo \cite{CCEE_RAZAO_SER}. Anteriormente se chamava Mercado Atacadista de Energia - MAE.}
+	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: Atua desde a medição de energia gerada e efetivamente consumida até a liquidação financeira dos contratos de compra e venda no curto prazo \cite{CCEE}. Anteriormente se chamava Mercado Atacadista de Energia - MAE.}
 	
-	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS_O_QUE_E}}
+	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS}}
 	
-	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético\cite{EPE_O_QUE_FAZEMOS}.}
+	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético\cite{EPE}.}
 	
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\linewidth]{orgaos_governo.jpg}
-		\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE_COM_QUEM_SE_RELACIONA}.}}
+		\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE}.}}
 	\end{figure}
 \end{itemize} 
 
 
-\paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica foi dividir o Sistema Interligado Nacional - SIN\cite{SIN} em quatro subsistemas sendo estes: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca. Participam desse sistema diversos agentes\cite{SIN_GOVERNANCIA}, sendo eles: 
+\paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica foi dividir o Sistema Interligado Nacional - SIN\cite{ONS} em quatro subsistemas sendo estes: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca. Participam desse sistema diversos agentes\cite{CCEE}, sendo eles: 
 
 \begin{itemize}
 	\item{\textbf{Agentes geradores}: são agentes autorizados a gerar energia elétrica para o sistema.}
@@ -59,7 +59,7 @@
 				
 				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
 				
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{ONS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{ONS}}}
 				
 			\end{center}
 			
@@ -75,7 +75,7 @@
 	
 	\begin{center}
 		
-		\caption{Critérios vigentes para se tornar consumidor Livre \cite{CCEE_VISAO_GERAL}.}
+		\caption{Critérios vigentes para se tornar consumidor Livre \cite{CCEE}.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -126,20 +126,20 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 \paragraph{}Sendo assim, utilizar as usinas hidrelétricas - UHEs na capacidade máxima gerará o menor custo de energia possível no mês atual, porém, se no futuro for necessário utilizar outras fontes para suprir a demanda energética, o custo pode ser muito maior do que em uma situação onde a produção energética da UHE foi distribuída durantes os meses consecutivos. Por um outro lado, caso a a quantidade de água armazenada em um reservatório supere o limiar máximo do mesmo, torna-se necessário liberar o excedente para o rio, situação chamada de "vertimento". Isto é indesejável, pois resulta em um desperdício de energia barata. Portanto, um planejamento equivocado pode causar altas no PLD, o que afeta diretamente os agentes que participam do mercado de energia elétrico brasileiro.
 
 
-\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{MatrizEnergetica}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois depende baste de condições climáticas, o que dificulta o planejamento para períodos longos.
+\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{EPE}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois depende baste de condições climáticas, o que dificulta o planejamento para períodos longos.
 
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{matrizEletrica_mundo.png}
-		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{MatrizEnergetica}.}}
+		\caption[\small{Matriz Elétrica Mundial \cite{EPE}.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{EPE}.}}
 		
 	\end{subfigure}\hfill
 	\begin{subfigure}{.48\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{matrizEletrica_brasil.png}
-		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{MatrizEnergetica}.}}
+		\caption[\small{Matriz Elétrica Mundial \cite{EPE}.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{EPE}.}}
 	\end{subfigure}
 	\caption{Comparação entre a matriz elétrica mundial e a brasileira}
 	\label{fig:MatrizEletricaComparacao}
@@ -152,7 +152,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{PLD_media_mensal_SE.jpg}
-	\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE_PRECO_PLD}.}}
+	\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE}.}}
 \end{figure}
 
 \paragraph{}No gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
@@ -170,7 +170,7 @@ PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano
 
 	\begin{center}
 
-		\caption{Variáveis utilizadas no cálculo do PLD semanal \cite{CCEE_PLD_ANEXO}.}
+		\caption{Variáveis utilizadas no cálculo do PLD semanal \cite{CCEE}.}
 
 		\begin{tabular}{|c|c|}\hline
 
@@ -199,7 +199,7 @@ O valores de definidos para os últimos 5 anos foram:
 	
 	\begin{center}
 		
-		\caption{Preço mínimo e máximo do PLD \cite{CCEE_METODOLOGIA_PRECOS}.}
+		\caption{Preço mínimo e máximo do PLD \cite{CCEE}.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -230,7 +230,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	
 	\begin{center}
 		
-		\caption{Arquivos de entrada do DECOMP \cite{CCEE_METODOLOGIA_PRECOS}.}
+		\caption{Arquivos de entrada do DECOMP \cite{CCEE}.}
 		
 		\begin{tabular}{|c|c|}\hline
 			
@@ -256,7 +256,8 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 
 \paragraph{}Obter um modelo matemático baseado no DECOMP que possa ser utilizado na previsão do PLD é de interesse não só dos agentes que participam do mercado elétrico brasileiro, como também de empresas indiretamente relacionadas ao setor como consultorias e bancos, além de existir o viés acadêmico, pois o entendimento da dinâmica do preço pode ajudar na formulação de novos modelo de previsão e alteração do já existente, buscando melhoras nas atividades de planejamento feitas pelos órgãos.
 
-Em \cite{TCC_PLD} foi utilizada uma abordagem onde são previstos os valores de energia afluente, energia proveniente de hidroelétricas, energia proveniente de usinas térmicas e carga dos subsistemas, a fim de obter o valor do PLD indiretamente. A outra forma proposta foi utilizar a própria informação sobre o PLD na previsão do mesmo. Em ambos os casos, foram utilizadas redes neurais artificiais autorregressiva não-linear - NARNET e os valores previstos são para até 3 semanas à frente.
+\section{Revisão bibliográfica}
+\paragraph{}Em \cite{TCC_PLD} foi utilizada uma abordagem onde são previstos os valores de energia afluente, energia proveniente de hidroelétricas, energia proveniente de usinas térmicas e carga dos subsistemas, a fim de obter o valor do PLD indiretamente. A outra forma proposta foi utilizar a própria informação sobre o PLD na previsão do mesmo. Em ambos os casos, foram utilizadas redes neurais artificiais autorregressiva não-linear - NARNET e os valores previstos são para até 3 semanas à frente.
 
 \begin{figure}[H]
 	\centering
@@ -295,7 +296,7 @@ Em \cite{TCC_PLD} foi utilizada uma abordagem onde são previstos os valores de e
 	\label{fig:PrevisaoDiretaPLDUFOP}	
 \end{figure}
 
-Outras abordagens são vistas em \cite{PrevisaoMultiPassos}, onde é proposto um modelo híbrido com a utilização de modelo autorregressivo de média móvel integrada sazonal - SARIMA, análise de componentes principais e redes neurais, conforme a figura a seguir:
+\paragraph{}Outras abordagens são vistas em \cite{PrevisaoMultiPassos}, onde é proposto um modelo híbrido com a utilização de modelo autorregressivo de média móvel integrada sazonal - SARIMA, análise de componentes principais e redes neurais, conforme a figura a seguir:
 
 \begin{figure}[H]
 	\centering
@@ -315,7 +316,7 @@ Outras abordagens são vistas em \cite{PrevisaoMultiPassos}, onde é proposto um m
 	\label{fig:ResultadoPrevisaoMultiPassos}		
 \end{figure}
 
-Na segunda abordagem proposta pelo mesmo autor utilizou-se uma combinação do algoritmo C5.0 e árvore de classificação e regressão - CART para determinar se o preço do PLD será estará dentro de um patamar num instante futuro.
+\paragraph{}Na segunda abordagem proposta pelo mesmo autor utilizou-se uma combinação do algoritmo C5.0 e árvore de classificação e regressão - CART para determinar se o preço do PLD será estará dentro de um patamar num instante futuro.
 
 \begin{figure}[H]
 	\centering
@@ -335,4 +336,8 @@ Na segunda abordagem proposta pelo mesmo autor utilizou-se uma combinação do alg
 	\label{fig:ResultadoPrevisaoMultiPassosClassificador}		
 \end{figure}
 
-Em ambos o casos acima o autor realiza previsões para um período de 12 semanas à frente.
+\paragraph{}Em ambos o casos acima o autor realiza previsões para um período de 12 semanas à frente.
+
+\paragraph{}No trabalho visto em \cite{RNA_DIRETA_E_RECORRENTE}, , têm se a análise das variáveis utilizadas na entrada de cada submercado através da correlação. Além é feita a comparação entre os resultados obtidos pelo modelo ARIMA, rede neura recorrente, rede neural direta sem seleção de lags e com a seleção de lags. Já em \cite{RNA_PRECO_SPOT} foram utilizadas como variáveis de entrada a geração das hidroelétricas, térmicas e eólica, além da Energia Natural Afluente - ENA, ENA máxima, EAR - Energia Armazenada e o PLD para cada um dos patamares nas 4 últimas semanas, utilizando uma rede neural com 3 neurônios na camada interna. Com métrica utilizada, faz-se um plot do alvo pelo resultado previsto pela rede e então é feito uma ajuste linear. No caso ideal a equação $y = a\cdot x + b$ se torna $y = x$ (previsão perfeita).
+
+
