Added more references to chapter 2

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -125,6 +125,11 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}FFT - Fast Fourier Transform
 \paragraph{}IIR - Infinite Impulse Response
 \paragraph{}FIR - Finite Impulse Response
+\paragraph{}GARCH - Genralized Auto-Regressive Conditional Heteroscedasticity
+\paragraph{}ACF - Autocorrelation Function
+\paragraph{}PACF - Partial Autocorrelation Function
+\paragraph{}AIC - Akaike Info Criterion
+\paragraph{}PSF - Partial Sequence-based Forecasting
 \pagebreak
 
 
