--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -87,7 +87,7 @@
 	TCC_PLD,
 	AUTHOR = "Alan Patrik Souza Silva",
 	TITLE = "Previsão do preço de liquidação das diferenças por meio de redes neurais artificiais",
-	SCHOOL = "Univeridade Federal de Ouro Preto",
+	SCHOOL = "Universidade Federal de Ouro Preto",
 	YEAR = "2018",
 }
 @ARTICLE{
@@ -483,10 +483,37 @@
 
 @MASTERSTHESIS{
 	RNA_PRECO_SPOT,
-	AUTHOR = " Alcantaro Lemes Rodrigues",
+	AUTHOR = "Alcantaro Lemes Rodrigues",
 	TITLE = "Redes neurais artificiais aplicadas na previsão de preços do mercado spot de energia elétrica",
-	SCHOOL = "	Universidade de São Paulo ",
+	SCHOOL = "Universidade de São Paulo",
 	YEAR = "2009",
 }
 
-
+@MASTERSTHESIS{
+	GARCH_PLD,
+	AUTHOR = "Antônio José Sobrinho de Sousa",
+	TITLE = "Análise e Previsão da Volatilidade do Preçode Liquidação das Diferençasno Mercado Brasileiro Utilizando o Modelo GARCH",
+	SCHOOL = "Universidade Federal da Bahia",
+	YEAR = "2013",
+}
+@MISC{
+	TCC_FABIANE,
+	AUTHOR = "Fabiane Barbosa do Nascimento",
+	TITLE = "Redes Neurais Artificiais Aplicadas à Predição do Preço De Liquidação das Diferenças no Mercado De Energia",
+	SCHOOL = "Universidade Federal de Juiz de Fora",
+	YEAR = "2017",
+}
+@ARTICLE{
+	PSF_forecast,
+	author={F. {Martinez Alvarez} and A. {Troncoso} and J. C. {Riquelme} and J. S. {Aguilar Ruiz}},
+	journal={IEEE Transactions on Knowledge and Data Engineering},
+	title={Energy Time Series Forecasting Based on Pattern Sequence Similarity},
+	year={2011},
+	volume={23},
+	number={8},
+	pages={1230-1243},
+	keywords={pattern clustering;time series;energy time series forecasting;pattern sequence similarity;clustering techniques;data point prediction;Electrostatic discharge;Silicon;Time series;forecasting;patterns.},
+	doi={10.1109/TKDE.2010.227},
+	ISSN={1041-4347},
+	month={Aug},
+}
