--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
@@ -174,7 +174,7 @@ cs_t = a \cdot \cos(2\pi f t) + b \cdot \sin(2 \pi f t)
 				
 				\includegraphics[width=\textwidth]{exemplo2_residual.jpg}
 				
-				\caption[\small{Residuo sem remoção de ciclos senoidasi para o dataset de nascimentos em Nova York\cite{birthNY} }]{\label{bNYres} \small{esiduo sem remoção de ciclos senoidasi para o dataset de nascimentos em Nova York. Fonte: Newton (1988). \cite{birthNY}}}
+				\caption[\small{Residuo sem remoção de ciclos senoidasi para o dataset de nascimentos em Nova York\cite{birthNY} }]{\label{bNYres} \small{Resíduo sem remoção de ciclos senoidais para o dataset de nascimentos em Nova York. Fonte: Newton (1988). \cite{birthNY}}}
 				
 			\end{center}	
 		}
@@ -209,7 +209,7 @@ cs_t = a \cdot \cos(2\pi f t) + b \cdot \sin(2 \pi f t)
 				
 				\includegraphics[width=\textwidth]{exemplo2_residual_tempo.jpg}
 				
-				\caption[\small{Sinal residual no tempo para o dataset de nascimentos em Nova York \cite{birthNY} }]{\label{bNYresFilt} \small{Sinal residual no tempo para o dataset de nascimentos em Nova York Fonte: Newton (1988). \cite{birthNY}}}
+				\caption[\small{Sinal residual no tempo para o dataset de nascimentos em Nova York \cite{birthNY} }]{\label{bNYresFiltTempo} \small{Sinal residual no tempo para o dataset de nascimentos em Nova York Fonte: Newton (1988). \cite{birthNY}}}
 				
 			\end{center}	
 		}
