--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -152,7 +152,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{PLD_media_mensal_SE.jpg}
-	\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE}.}}
+	\caption[\small{Instituições do setor elétrico brasileiro \cite{CCEE}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE}.}}
 \end{figure}
 
 \paragraph{}No gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
@@ -338,6 +338,17 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 
 \paragraph{}Em ambos o casos acima o autor realiza previsões para um período de 12 semanas à frente.
 
-\paragraph{}No trabalho visto em \cite{RNA_DIRETA_E_RECORRENTE}, , têm se a análise das variáveis utilizadas na entrada de cada submercado através da correlação. Além é feita a comparação entre os resultados obtidos pelo modelo ARIMA, rede neura recorrente, rede neural direta sem seleção de lags e com a seleção de lags. Já em \cite{RNA_PRECO_SPOT} foram utilizadas como variáveis de entrada a geração das hidroelétricas, térmicas e eólica, além da Energia Natural Afluente - ENA, ENA máxima, EAR - Energia Armazenada e o PLD para cada um dos patamares nas 4 últimas semanas, utilizando uma rede neural com 3 neurônios na camada interna. Com métrica utilizada, faz-se um plot do alvo pelo resultado previsto pela rede e então é feito uma ajuste linear. No caso ideal a equação $y = a\cdot x + b$ se torna $y = x$ (previsão perfeita).
+\paragraph{}No trabalho visto em \cite{RNA_DIRETA_E_RECORRENTE}, , têm se a análise das variáveis utilizadas na entrada de cada submercado através da correlação. Além é feita a comparação entre os resultados obtidos pelo modelo ARIMA, rede neura recorrente, rede neural direta sem seleção de lags e com a seleção de lags. Já em \cite{RNA_PRECO_SPOT} foram utilizadas como variáveis de entrada a geração das hidroelétricas, térmicas e eólica, além da Energia Natural Afluente - ENA, ENA máxima, EAR - Energia Armazenada e o PLD para cada um dos patamares nas 4 últimas semanas, utilizando uma rede neural com 3 neurônios na camada interna. Com métrica utilizada, faz-se um plot do alvo pelo resultado previsto pela rede e então é feito uma ajuste linear. No caso ideal a equação $y = a\cdot x + b$ se torna $y = x$ (previsão perfeita) para a previsão em um horizonte de até 6 semanas. Em \cite{TCC_FABIANE} utiliza-se uma rede neural recorrente para obter previsões em um horizonte de até seis meses a frente.
+
+\paragraph{}Outra abordagem diferente das observadas acima é a vista em \cite{GARCH_PLD}, onde o autor utiliza modelos \textit{Genralized Auto-Regressive Conditional Heteroscedasticity}- GARCH para a previsão do PLD. Para a estimação dos parâmetros foram utilizadas análises com base na funçao de autocorreções - ACF, autocorrelações parciais - PACF, função de verossimilhança (LLF) e testes estatísticos como o \textit{Akaike info criterion} - AIC.
+
+\paragraph{}A previsão do preço da energia elétrica é um interesse comum de vários agentes envolvidos com o mercado de energia mundialmente. Em \cite{PSF_forecast} o autor utiliza o algoritmo \textit{K-means} para clusterizar os dados de entrada passados e o algoritmo \textit{Partial Sequence-based Forecasting} - PSF para prever o resultado com base na média dos resultados obtidos no clusters anteriores. O modelo obtido foi utilizado para prever preço e demanda de energia para o mercado espanhol, australiano e nova-iorquino e obteve resultados relevantes.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{PSF_forecast.jpg}
+	\caption[\small{Instituições do setor elétrico brasileiro \cite{PSF_forecast}.}]{\label{PSF_forecast} \small{Utilização do algoritmo PSF para previsão de séries temporais \cite{PSF_forecast}.}}
+\end{figure}
+
 
 
