Added more references to chapter 2

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -517,3 +517,17 @@
 	ISSN={1041-4347},
 	month={Aug},
 }
+@ARTICLE{
+	simple_forecast,
+	author={C. P. {Rodriguez} and G. J. {Anders}},
+	journal={IEEE Transactions on Power Systems},
+	title={Energy price forecasting in the Ontario competitive power system market},
+	year={2004},
+	volume={19},
+	number={1},
+	pages={366-374},
+	keywords={pricing;power markets;forecasting theory;neural nets;fuzzy logic;power system economics;learning (artificial intelligence);energy price forecasting;Ontario electricity market;power system market;artificial intelligence methods;neural networks;fuzzy logic;open access market;spot price prediction techniques;soft computing techniques;neuro-fuzzy systems;market clearing price;learning algorithms;membership functions;generator outages;Load forecasting;Economic forecasting;Power systems;Artificial intelligence;Fuzzy logic;Electricity supply industry;Power markets;Intelligent networks;Artificial neural networks;ISO},
+	doi={10.1109/TPWRS.2003.821470},
+	ISSN={0885-8950},
+	month={Feb},
+}
