--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -350,5 +350,9 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\caption[\small{Instituições do setor elétrico brasileiro \cite{PSF_forecast}.}]{\label{PSF_forecast} \small{Utilização do algoritmo PSF para previsão de séries temporais \cite{PSF_forecast}.}}
 \end{figure}
 
+\paragraph{}Em \cite{simple_forecast} são mostradas algumas abordagem simples para o problema de previsão do preço \textit{spot} (PLD é um exemplo de preço \textit{spot}) no mercado de energia de Ontário. Foi utilizada uma rede neural com uma camada escondida, uma rede neural misturada com lógica fuzzy e otimização com o algoritmo IMO. A previsão foi feita hora a hora para um período de 24 horas. Concluiu-se que a rede neural com lógica fuzzy obteve o melhor resultado, além disso a relevância das entradas para a previsão foi analisada e viu-se que as entradas mais relevantes eram a demanda e a interrupção do gerador. 
+
+
+\paragraph{}
 
 
